Refactor: refatorando todo o codigo, mudando os DTOs para dtos separados de request e response